--- a/estilo/cssindex.css
+++ b/estilo/cssindex.css
@@ -1,8 +1,3 @@
-#cab {
-    background-color: gray;
-    height: 100px;
-    padding: 0%;
-}
 
 #cab img {
     height: 50px;
@@ -19,3 +14,20 @@
 #carrinho {
     margin-left: 1500px;
 }
+#cab {
+    background-color: rgb(59, 156, 119);
+    height: 100px;
+    padding: 0%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+     width: 100vw;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Figtree;
+    margin: 0;
+    padding: 0;
+}
+
