--- a/estilo/cssindex.css
+++ b/estilo/cssindex.css
@@ -147,12 +147,15 @@ body {
 }
 
 #top-bar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 12px;
-    padding: 18px 450px 8px 0;
+  display: flex;
+  justify-content: center;   
+  align-items: center;       
+  gap: 12px;
+  padding: 18px 500px 0 8px;       
+  width: 100%;
+  box-sizing: border-box;    
 }
+
 
 #busca {
     width: 260px;
@@ -160,6 +163,7 @@ body {
     border-radius: 8px;
     border: 1px solid  #296d4e;
     font-size: 1rem;
+    
 }
 
 #btn-busca {
