--- a/estilo/cssfavoritos.css
+++ b/estilo/cssfavoritos.css
@@ -26,5 +26,6 @@ a{
   text-decoration: none;     /* se for um <a> */
   transition: all 0.25s ease;
   box-shadow: 0 4px 14px rgba(44, 123, 57, 0.25);
-  margin: 10px;
+  margin: 15px;
+  margin-left: 30px;
 }
